--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hackout 2023: 30th October-5th November 2023</title>
+    <title>WOC - Winter of Code 2023</title>
     <link rel="stylesheet" href="style.css">
     
 </head>
